--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,22 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Gagik's Portfolio # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Technical Project Manager | Robotics & Engineering # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
-
+  # A minimal, responsive and feature-rich Jekyll theme for technical writing.
+Experienced operations manager and technical project lead with expertise in robotics,
+UAVs, automated systems, and procurement. Proven track record in product development,
+production management, and state-compliant technical projects.
+Explore my portfolio of innovative engineering solutions.
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://gagik-hovhannisyan.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: gagik-hovhannisyan # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
