--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,7 @@ tagline: Technical Project Manager | Robotics & Engineering # it will display as
 
 description: >- # used by seo meta and the atom feed
   # A minimal, responsive and feature-rich Jekyll theme for technical writing.
-Experienced operations manager and technical project lead with expertise in robotics,
-UAVs, automated systems, and procurement. Proven track record in product development,
-production management, and state-compliant technical projects.
-Explore my portfolio of innovative engineering solutions.
+Experienced operations manager and technical project lead with expertise in robotics, UAVs, automated systems, and procurement. Proven track record in product development, production management, and state-compliant technical projects. Explore my portfolio of innovative engineering solutions.
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://gagik-hovhannisyan.github.io"
